Ready version with Extra task

--- a/waifu/templates/main_page.html
+++ b/waifu/templates/main_page.html
@@ -4,7 +4,8 @@
 ---WAIFU---
 <form action = '{% url "main_page" %}' method="post">
     {{ form.as_p }}
-    <p>Enter your URL:<input type = "text" name = 'main_url'/></p>
+    <p>Enter your URL:<input type = "text" name = 'main_url'/>
+        Enter your custom URL(optional):<input type = "text" name = "custom_url"/></p>
     {{ valid }}
     <a href = '{{ link }}'>{{ host }}{{ link }}</a>
     <p><input type = "submit" value = "Convert!" name = "submit"/></p>
